# pplatex

./: .gitignore  CMakeLists.txt  COPYRIGHT.txt  README.md  README.txt  RELEASE  SConstruct  dist.sh
cmake/Modules/: FindPCRE.cmake
site_scons/: confighelper.py  envhelper.py  site_init.py
site_scons/conf/: CUDASetup.py  CppSetup.py  DSetup.py  DiaSetup.py  GnuplotSetup.py  LatexSetup.py  MSVCSetup.py  NotationSetup.py  OpenGLSetup.py  SDLSetup.py  __init__.py
site_scons/site_tools/: avr.py  avrprog.py  cuda.py  dia.py  file.py  gnuplot.py  notation.py  rst.py
src/: CMakeLists.txt  SConscript  latexoutputfilter.cpp  latexoutputfilter.h  main.cpp  outputfilter.cpp  outputfilter.h  outputinfo.cpp  outputinfo.h  ppluatex  regex.cpp  regex.h
test/: chapter.tex  min.tex  test.tex  test_paren.tex
